<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:icon="@drawable/icon_shortcut_text"
        android:enabled="true"
        android:shortcutId="text_translate"
        android:shortcutShortLabel="@string/text_translate">
        <intent
            android:targetPackage="com.coloros.translate"
            android:action="coloros.intent.action.TEXT_TRANS_SHORTCUT"
            android:targetClass="com.coloros.translate.ui.texttranslation.TextTranslationActivity">
            <extra
                android:name="fromTranslateShortcut"
                android:value="true"/>
        </intent>
    </shortcut>
    <shortcut
        android:icon="@drawable/icon_shortcut_dialog"
        android:enabled="true"
        android:shortcutId="dialog_translate"
        android:shortcutShortLabel="@string/dialog_translation">
        <intent
            android:targetPackage="com.coloros.translate"
            android:action="coloros.intent.action.DIALOGUE_TRANSLATION_SHORTCUT"
            android:targetClass="com.coloros.translate.ui.dialoguetranslation.DialogTranslationActivity">
            <extra
                android:name="fromTranslateShortcut"
                android:value="true"/>
        </intent>
    </shortcut>
    <shortcut
        android:icon="@drawable/icon_shortcut_simultaneous"
        android:enabled="true"
        android:shortcutId="simultaneous"
        android:shortcutShortLabel="@string/simultaneous">
        <intent
            android:targetPackage="com.coloros.translate"
            android:action="coloros.intent.action.SIMULTANEOUS_TRANS_SHORTCUT"
            android:targetClass="com.coloros.translate.ui.simultaneous.SimultaneousMainActivity">
            <extra
                android:name="fromTranslateShortcut"
                android:value="true"/>
        </intent>
    </shortcut>
</shortcuts>
