<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    android:background="@drawable/bg_transparent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="@dimen/dp_16">
    <TextView
        android:textAppearance="?attr/couiTextAppearanceButton"
        android:textSize="@dimen/sp_16"
        android:textColor="@color/coui_color_label_theme_blue"
        android:gravity="center"
        android:id="@+id/tv_share_text"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_text"
        android:paddingVertical="@dimen/dp_14"/>
    <View
        android:id="@+id/divider_line_text"
        android:background="@color/coui_color_divider"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="0.33dp"/>
    <TextView
        android:textAppearance="?attr/couiTextAppearanceButton"
        android:textSize="@dimen/sp_16"
        android:textColor="@color/coui_color_label_theme_blue"
        android:gravity="center"
        android:id="@+id/tv_share_recording"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_record"
        android:paddingVertical="@dimen/dp_14"/>
    <View
        android:id="@+id/divider_line_bottom"
        android:background="@color/coui_color_divider"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="0.33dp"/>
    <TextView
        android:textAppearance="?attr/couiTextAppearanceButton"
        android:textSize="@dimen/sp_16"
        android:textColor="@color/coui_color_label_theme_blue"
        android:gravity="center"
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_cancel"
        android:paddingVertical="@dimen/dp_14"/>
</LinearLayout>
