<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="@dimen/dp_24">
    <ImageView
        android:id="@+id/tip_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img_double_screen_startup_tips_inner"
        app:layout_constraintBottom_toTopOf="@+id/tx_tips"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <com.coui.appcompat.textview.COUITextView
        android:textAppearance="?attr/couiTextAppearanceButton"
        android:textSize="@dimen/sp_18"
        android:textColor="@color/coui_color_label_primary"
        android:id="@+id/tx_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:text="@string/double_screen_startup_tips_title"
        android:fontFamily="sans-serif-medium"
        android:textFontWeight="500"
        app:layout_constraintBottom_toTopOf="@+id/tx_tips2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tip_img"/>
    <com.coui.appcompat.textview.COUITextView
        android:textAppearance="?attr/couiTextAppearanceButton"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/coui_color_label_secondary"
        android:id="@+id/tx_tips2"
        android:scrollbars="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_12"
        android:text="@string/double_screen_dialog_tips_context_new"
        android:textFontWeight="400"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@+id/cb_is_never_show"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_tips"/>
    <com.coui.appcompat.checkbox.COUICheckBox
        android:textAppearance="@style/couiTextBodyXS"
        android:textColor="@color/coui_color_label_secondary"
        android:id="@+id/cb_is_never_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/no_tips_anymore"
        android:textFontWeight="400"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_tips2"/>
</androidx.constraintlayout.widget.ConstraintLayout>
