<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/setting_card_bg"
    android:layout_width="match_parent"
    android:layout_height="215dp"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:id="@+id/lltitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">
        <TextView
            android:textSize="14sp"
            android:textColor="@color/bottom_alert_dialog_message_text_color"
            android:gravity="center"
            android:id="@+id/source_language_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="23dp"
            android:text="@string/source_language"
            android:layout_weight="1"
            android:layout_alignParentStart="true"/>
        <ImageView
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/change_voice"
            android:layout_marginStart="@dimen/dp_18"
            android:layout_marginEnd="@dimen/dp_18"/>
        <TextView
            android:textSize="14sp"
            android:textColor="@color/bottom_alert_dialog_message_text_color"
            android:gravity="center"
            android:id="@+id/target_language_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="23dp"
            android:text="@string/target_language"
            android:layout_weight="1"
            android:layout_alignParentEnd="true"/>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/chooseLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_below="@+id/lltitle">
        <com.coui.appcompat.picker.COUINumberPicker
            android:id="@+id/sourcelanguage"
            android:layout_width="wrap_content"
            android:layout_height="135dp"
            android:layout_marginEnd="18dp"
            android:layout_toStartOf="@+id/space"
            android:layout_alignParentStart="true"
            app:couiFocusTextColor="@color/common_primary_light_color"
            app:couiPickerRowNumber="3"
            app:endTextSize="14sp"
            app:focusTextSize="18sp"
            app:startTextSize="14sp"/>
        <Space
            android:id="@+id/space"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>
        <com.coui.appcompat.picker.COUINumberPicker
            android:id="@+id/language_picker"
            android:layout_width="wrap_content"
            android:layout_height="135dp"
            android:layout_marginStart="18dp"
            android:layout_toEndOf="@+id/space"
            android:layout_alignParentEnd="true"
            app:couiFocusTextColor="@color/common_primary_light_color"
            app:couiPickerRowNumber="3"
            app:endTextSize="14sp"
            app:focusTextSize="18sp"
            app:startTextSize="14sp"/>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_centerInParent="true"
            app:cardBackgroundColor="@color/focus_language_bg"
            app:cardCornerRadius="251dp"
            app:cardElevation="0dp">
            <ImageView
                android:layout_gravity="center"
                android:id="@+id/switchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/change_voice"
                android:contentDescription="@string/swap_language"/>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</LinearLayout>
